# ZCrypt

./: .gitignore
ZCrypt-Go/: Test.txt  Test.txt.json  go.mod  main.go
ZCrypt-Go/internal/CrypticEngine/: AADBuilder.go  CrypticRecord.go  Decrypt.go  Encrypt.go
ZCrypt-Rust/: .gitignore  Cargo.toml  build.rs  compile_errors.txt  test.json
ZCrypt-Rust/Proto/: ZProto.proto  zpipcproto.proto
ZCrypt-Rust/Proto/z_croto/: ZCroto.rs
ZCrypt-Rust/src/: lib.rs  main.rs  test.json
ZCrypt-Rust/src/cpp/: match_engine.cpp
ZCrypt-Rust/src/cryptic_engine/: Cargo.toml  aad_builder.rs  cryptic_record.rs  decrypt.rs  encrypt.rs  mod.rs
ZCrypt-Rust/src/db/: mod.rs
ZCrypt-Rust/src/gproto/: zproto.rs
ZCrypt-Rust/src/ipc/: IPC.rs  async_ipc.rs  ipc.rs  listener_service.rs  mod.rs  tonic_ipc.rs
ZCrypt-Rust/src/ipc/testing/c/: unix_c.rs
ZCrypt-Rust/src/ipc/testing/s/: unix_s.rs
ZCrypt-Rust/src/service/: cryptic_service.rs  mod.rs
ZCrypt-Rust/src/zpipcproto/: mod.rs  zpipcproto.rs
ZCrypt-Rust/src/zproto/: mod.rs  zproto.rs
