[package]
name = "ZCrypt"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
hex = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1", features = ["full"] }
named_pipe = "0.4"
tonic = "0.11"
http = "1.4.0"
hyper = "1.8.1"
tower = { version = "0.4", features = ["util"] }
futures = "0.3.32"
tokio-stream = "0.1.18"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "json", "macros"] }
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.11"
cc = "1.0"
